# rasayan

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  benchmarks.md  deny.toml
.github/workflows/: ci.yml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
examples/: basic.rs
scripts/: bench-history.sh
src/: ai.rs  alignment.rs  amino_catabolism.rs  beta_oxidation.rs  calcium.rs  constants.rs  domain.rs  energy.rs  enzyme.rs  error.rs  etc.rs  glycolysis.rs  hormonal.rs  jak_stat.rs  lib.rs  logging.rs  mapk.rs  mcp.rs  membrane.rs  metabolism.rs  neurotransmitter.rs  nuclear_receptor.rs  pathway.rs  pi3k.rs  protein.rs  ptm.rs  receptor.rs  signal.rs  signaling.rs  tca.rs
tests/: integration.rs  validation.rs
