[package]
name = "rasayan"
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Rasayan — biochemistry engine: enzyme kinetics, metabolic pathways, signal transduction, protein structure, membrane transport"
homepage = "https://github.com/MacCracken/rasayan"
repository = "https://github.com/MacCracken/rasayan"
readme = "README.md"
documentation = "https://docs.rs/rasayan"
keywords = ["biochemistry", "enzyme", "metabolism", "protein", "biology"]
categories = ["science", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[features]
default = ["std"]
std = ["serde/std", "thiserror/std"]
full = ["std", "logging"]
logging = ["dep:tracing-subscriber"]

[[bench]]
name = "benchmarks"
harness = false
